--- a/pickups.html
+++ b/pickups.html
@@ -347,7 +347,8 @@ Team 4  - Rashard Higgins/Emmanuel Sanders (10/27)<br>
 Team 10 - Ben DiNucci/Sam Sloman (10/27)<br>
 Team 9  - Tevin Coleman/Dak Prescott (10/28)<br>
 Team 3  - Derek Carr/Odell Beckham (10/29)<br>
-Team 9  - Justin Jackson/Darrynton Evans (11/4)
+Team 9  - Justin Jackson/Darrynton Evans (11/4)<br>
+Team 10 - Corey Davis/Jimmy Garoppolo (11/8)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
