--- a/roster.html
+++ b/roster.html
@@ -266,7 +266,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (10)</b></font></td></tr>
 <tr><td>BAL</td><td>Lamar Jackson          </td></tr>
-<tr><td> SF</td><td>Jimmy Garoppolo        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td> SF</td><td>Raheem Mostert         </td></tr>
@@ -278,6 +277,7 @@
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>MIA</td><td>DeVante Parker         </td></tr>
 <tr><td>BUF</td><td>John Brown             </td></tr>
+<tr><td>TEN</td><td>Corey Davis            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Jimmy Graham           </td></tr>
 <tr><td height=9></td><td></td></tr>
