--- a/thousand.html
+++ b/thousand.html
@@ -435,6 +435,12 @@
     <td>1115</td>
     <td>States</td>
     <td>705</td></tr>
+<tr><td>2020</td>
+    <td>Week 9</td>
+    <td>Sam Edwards</td>
+    <td>1115</td>
+    <td>John</td>
+    <td>620</td></tr>
 <tr><td>2002</td>
     <td>Week 10</td>
     <td>Brian Crooch</td>
