--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
 <a href="week8.html"><b>8</b></a>
-<a href="week9.html"><b>9P</b></a><br>
+<a href="week9.html"><b>9</b></a>
+<a href="week10.html"><b>10P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -67,42 +68,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>7030</font></td>
-    <td><font size=2>4605</font></td>
+    <td><font size=2>8145</font></td>
+    <td><font size=2>5225</font></td>
     <td><font size=2>1555</font></td>
     <td><font size=2>605</font></td>
-    <td><font size=2>2</font></td></tr>
+    <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5795</font></td>
-    <td><font size=2>5170</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6355</font></td>
+    <td><font size=2>6105</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5425</font></td>
-    <td><font size=2>5770</font></td>
+    <td><font size=2>6185</font></td>
+    <td><font size=2>6315</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5140</font></td>
-    <td><font size=2>5175</font></td>
+    <td><font size=2>5815</font></td>
+    <td><font size=2>5810</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5090</font></td>
-    <td><font size=2>4650</font></td>
+    <td><font size=2>5755</font></td>
+    <td><font size=2>5230</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
@@ -116,41 +117,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5330</font></td>
-    <td><font size=2>5020</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5965</font></td>
+    <td><font size=2>5695</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>255</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4560</font></td>
-    <td><font size=2>4875</font></td>
-    <td><font size=2>790</font></td>
-    <td><font size=2>280</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5215</font></td>
-    <td><font size=2>6625</font></td>
+    <td><font size=2>6150</font></td>
+    <td><font size=2>7185</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>85</font></td>
     <td><font size=2>2</font></td></tr>
+<tr><td><font size=2>Mike(4)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5105</font></td>
+    <td><font size=2>5635</font></td>
+    <td><font size=2>790</font></td>
+    <td><font size=2>280</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4520</font></td>
-    <td><font size=2>5565</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5100</font></td>
+    <td><font size=2>6230</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4705</font></td>
-    <td><font size=2>5355</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5325</font></td>
+    <td><font size=2>6470</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
