--- a/week9.html
+++ b/week9.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>215</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Fuller</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JHoward</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>55</td></tr>
+<tr><td>Fuller</td>        <td></td><td align=right>175</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>45</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>675</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McCaffery</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>250</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>195</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Claypool</td>      <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>635</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Washington</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>270</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>25</td></tr>
+<tr><td>EdwardsHelaire</td><td></td><td align=right>50</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>30</td></tr>
+<tr><td>Washington</td>    <td></td><td align=right>75</td></tr>
 <tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>560</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Edmonds</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>275</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>350</td></tr>
+<tr><td>Edmonds</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Robinson</td>      <td></td><td align=right>40</td></tr>
+<tr><td>MThomas</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Prater</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>935</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (4)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>270</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Beasley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ruggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>75</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>105</td></tr>
+<tr><td>Ruggs</td>         <td></td><td align=right>95</td></tr>
+<tr><td></td>              <td></td><td align=right>545</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>270</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>125</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>205</td></tr>
+<tr><td>Engram</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>55</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>760</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>25</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Gibson</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chark</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Chark</td>         <td></td><td align=right>195</td></tr>
 <tr><td>-</td>             <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Luton</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Luton</td>         <td></td><td align=right>250</td></tr>
+<tr><td></td>              <td></td><td align=right>620</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>395</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>30</td></tr>
 <tr><td>DaJohnson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>185</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>180</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>50</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>120</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>155</td></tr>
+<tr><td></td>              <td></td><td align=right>1115</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Newton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Newton</td>        <td></td><td align=right>140</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>50</td></tr>
 <tr><td>JJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Hamler</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>125</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>175</td></tr>
+<tr><td>Hurst</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>110</td></tr>
+<tr><td>Hamler</td>        <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>665</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>125</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>130</td></tr>
 <tr><td>Lindsay</td>       <td></td><td align=right>0</td></tr>
 <tr><td>CDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jeudy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Jeudy</td>         <td></td><td align=right>160</td></tr>
+<tr><td>Graham</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>65</td></tr>
 <tr><td>Hasty</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>580</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,42 +167,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>7030</font></td>
-    <td><font size=2>4605</font></td>
+    <td><font size=2>8145</font></td>
+    <td><font size=2>5225</font></td>
     <td><font size=2>1555</font></td>
     <td><font size=2>605</font></td>
-    <td><font size=2>2</font></td></tr>
+    <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5795</font></td>
-    <td><font size=2>5170</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6355</font></td>
+    <td><font size=2>6105</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5425</font></td>
-    <td><font size=2>5770</font></td>
+    <td><font size=2>6185</font></td>
+    <td><font size=2>6315</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5140</font></td>
-    <td><font size=2>5175</font></td>
+    <td><font size=2>5815</font></td>
+    <td><font size=2>5810</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5090</font></td>
-    <td><font size=2>4650</font></td>
+    <td><font size=2>5755</font></td>
+    <td><font size=2>5230</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
@@ -216,41 +216,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5330</font></td>
-    <td><font size=2>5020</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5965</font></td>
+    <td><font size=2>5695</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>255</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4560</font></td>
-    <td><font size=2>4875</font></td>
-    <td><font size=2>790</font></td>
-    <td><font size=2>280</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5215</font></td>
-    <td><font size=2>6625</font></td>
+    <td><font size=2>6150</font></td>
+    <td><font size=2>7185</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>85</font></td>
     <td><font size=2>2</font></td></tr>
+<tr><td><font size=2>Mike(4)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5105</font></td>
+    <td><font size=2>5635</font></td>
+    <td><font size=2>790</font></td>
+    <td><font size=2>280</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4520</font></td>
-    <td><font size=2>5565</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5100</font></td>
+    <td><font size=2>6230</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4705</font></td>
-    <td><font size=2>5355</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5325</font></td>
+    <td><font size=2>6470</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
