--- a/roster.html
+++ b/roster.html
@@ -99,7 +99,7 @@
 <tr><td> KC</td><td>Le'Veon Bell           </td></tr>
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
-<tr><td>SEA</td><td>Carlos Hyde            </td></tr>
+<tr><td>NYG</td><td>Wayne Gallman          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
@@ -187,11 +187,11 @@
 <tr><td>DEN</td><td>Melvin Gordon          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
+<tr><td>HOU</td><td>Duke Johnson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>CAR</td><td>Robby Anderson         </td></tr>
-<tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
