--- a/pickups.html
+++ b/pickups.html
@@ -99,8 +99,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Wayne Gallman/Carlos Hyde</td>
+<td width=50>11/10</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -348,7 +348,8 @@ Team 10 - Ben DiNucci/Sam Sloman (10/27)<br>
 Team 9  - Tevin Coleman/Dak Prescott (10/28)<br>
 Team 3  - Derek Carr/Odell Beckham (10/29)<br>
 Team 9  - Justin Jackson/Darrynton Evans (11/4)<br>
-Team 10 - Corey Davis/Jimmy Garoppolo (11/8)
+Team 10 - Corey Davis/Jimmy Garoppolo (11/8)<br>
+Team 7  - Duke Johnson/Julian Edelman (11/10)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
