--- a/pickups.html
+++ b/pickups.html
@@ -349,7 +349,8 @@ Team 9  - Tevin Coleman/Dak Prescott (10/28)<br>
 Team 3  - Derek Carr/Odell Beckham (10/29)<br>
 Team 9  - Justin Jackson/Darrynton Evans (11/4)<br>
 Team 10 - Corey Davis/Jimmy Garoppolo (11/8)<br>
-Team 7  - Duke Johnson/Julian Edelman (11/10)
+Team 7  - Duke Johnson/Julian Edelman (11/10)<br>
+Team 9  - Giovani Bernard/Devonta Freeman (11/13)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
