--- a/roster.html
+++ b/roster.html
@@ -240,9 +240,9 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
-<tr><td>NYG</td><td>Devonta Freeman        </td></tr>
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td>LAC</td><td>Justin Jackson         </td></tr>
+<tr><td>CIN</td><td>Giovani Bernard        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
