--- a/roster.html
+++ b/roster.html
@@ -52,7 +52,7 @@
 <tr><td> LV</td><td>Darren Waller          </td></tr>
 <tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> SF</td><td>Robbie Gould           </td></tr>
+<tr><td>ARI</td><td>Zane Gonzalez          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
@@ -272,22 +272,22 @@
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
 <tr><td>MIA</td><td>Matt Breida            </td></tr>
 <tr><td> SF</td><td>Jerick McKinnon        </td></tr>
+<tr><td>LAC</td><td>Kalen Ballage          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>MIA</td><td>DeVante Parker         </td></tr>
 <tr><td>BUF</td><td>John Brown             </td></tr>
-<tr><td>TEN</td><td>Corey Davis            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Jimmy Graham           </td></tr>
+<tr><td>PIT</td><td>Eric Ebron             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Joey Slye              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td>JAX</td><td>Laviska Shenault       </td></tr>
-<tr><td> SF</td><td>JaMycal Hasty          </td></tr>
-<tr><td>DAL</td><td>Ben DiNucci            </td></tr>
+<tr><td>MIA</td><td>Salvon Ahmed           </td></tr>
 </table>
 </td>
 <td>
