--- a/pickups.html
+++ b/pickups.html
@@ -35,8 +35,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Zane Gonzalez/Robbie Gould</td>
+<td width=50>11/17</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -279,8 +279,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kalen Ballage/Ben DiNucci</td>
+<td width=50>11/17</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -291,8 +291,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Eric Ebron/Corey Davis</td>
+<td width=50>11/17</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -350,7 +350,8 @@ Team 3  - Derek Carr/Odell Beckham (10/29)<br>
 Team 9  - Justin Jackson/Darrynton Evans (11/4)<br>
 Team 10 - Corey Davis/Jimmy Garoppolo (11/8)<br>
 Team 7  - Duke Johnson/Julian Edelman (11/10)<br>
-Team 9  - Giovani Bernard/Devonta Freeman (11/13)
+Team 9  - Giovani Bernard/Devonta Freeman (11/13)<br>
+Team 10 - Salvon Ahmed/JaMycal Hasty (11/17)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
