--- a/pickups.html
+++ b/pickups.html
@@ -368,4 +368,9 @@ Team 9 - Darrynton Evans
 Team 3 - Rashard Higgins<br>
 Team 4 - Cairo Santos
 </td></tr>
+<tr><td width=50>11/22</td>
+<td width=600>
+Team 4 - Noah Fant<br>
+Team 5 - Nyheim Hines
+</td></tr>
 </table>
