--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <a href="week8.html"><b>8</b></a>
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
-<a href="week11.html"><b>11P</b></a><br>
+<a href="week11.html"><b>11</b></a>
+<a href="week12.html"><b>12P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -69,42 +70,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>9005</font></td>
-    <td><font size=2>5520</font></td>
+    <td><font size=2>9910</font></td>
+    <td><font size=2>6130</font></td>
     <td><font size=2>1555</font></td>
     <td><font size=2>605</font></td>
-    <td><font size=2>4</font></td></tr>
+    <td><font size=2>5</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6735</font></td>
-    <td><font size=2>6345</font></td>
+    <td><font size=2>7405</font></td>
+    <td><font size=2>6945</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6580</font></td>
-    <td><font size=2>6770</font></td>
+    <td><font size=2>7360</font></td>
+    <td><font size=2>7400</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6110</font></td>
-    <td><font size=2>6670</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6710</font></td>
+    <td><font size=2>7340</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5995</font></td>
-    <td><font size=2>5610</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6605</font></td>
+    <td><font size=2>6515</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
@@ -118,41 +119,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6740</font></td>
-    <td><font size=2>7745</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7205</font></td>
+    <td><font size=2>8245</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>85</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6525</font></td>
-    <td><font size=2>6285</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7155</font></td>
+    <td><font size=2>7065</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>255</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5755</font></td>
-    <td><font size=2>6150</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6120</font></td>
+    <td><font size=2>6745</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5780</font></td>
-    <td><font size=2>6865</font></td>
+    <td><font size=2>6375</font></td>
+    <td><font size=2>7230</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5615</font></td>
-    <td><font size=2>6880</font></td>
+    <td><font size=2>6115</font></td>
+    <td><font size=2>7345</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
     <td><font size=2>1</font></td></tr>
