--- a/pickups.html
+++ b/pickups.html
@@ -210,8 +210,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Daniel Carlson/Jake Elliott</td>
+<td width=50>11/29</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -351,7 +351,9 @@ Team 9  - Justin Jackson/Darrynton Evans (11/4)<br>
 Team 10 - Corey Davis/Jimmy Garoppolo (11/8)<br>
 Team 7  - Duke Johnson/Julian Edelman (11/10)<br>
 Team 9  - Giovani Bernard/Devonta Freeman (11/13)<br>
-Team 10 - Salvon Ahmed/JaMycal Hasty (11/17)
+Team 10 - Salvon Ahmed/JaMycal Hasty (11/17)<br>
+Team 9  - Devontae Booker/Justin Jackson (11/26)<br>
+Team 10 - Daniel Jones/AJ Dillon (11/29)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
@@ -372,5 +374,10 @@ Team 4 - Cairo Santos
 <td width=600>
 Team 4 - Noah Fant<br>
 Team 5 - Nyheim Hines
+</td></tr>
+<tr><td width=50>11/27</td>
+<td width=600>
+Team 5 - Tyler Bass, Robby Anderson<br>
+Team 7 - Julio Jones, JK Dobbins
 </td></tr>
 </table>
