--- a/roster.html
+++ b/roster.html
@@ -131,10 +131,10 @@
 <tr><td>MIA</td><td>Myles Gaskin           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
-<tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td> NE</td><td>N'Keal Harry           </td></tr>
 <tr><td> TB</td><td>Antonio Brown          </td></tr>
+<tr><td>CAR</td><td>Robby Anderson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>DEN</td><td>Noah Fant              </td></tr>
@@ -142,8 +142,8 @@
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>BAL</td><td>JK Dobbins             </td></tr>
 <tr><td>DET</td><td>D'Andre Swift          </td></tr>
+<tr><td>BUF</td><td>Tyler Bass             </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -191,17 +191,17 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
-<tr><td>CAR</td><td>Robby Anderson         </td></tr>
+<tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td>TEN</td><td>Stephen Gostkowski     </td></tr>
+<tr><td> LV</td><td>Daniel Carlson         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
 <tr><td> GB</td><td>Jordan Love            </td></tr>
+<tr><td>BAL</td><td>JK Dobbins             </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -241,8 +241,8 @@
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
-<tr><td>LAC</td><td>Justin Jackson         </td></tr>
 <tr><td>CIN</td><td>Giovani Bernard        </td></tr>
+<tr><td> LV</td><td>Devontae Booker        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
@@ -266,6 +266,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (10)</b></font></td></tr>
 <tr><td>BAL</td><td>Lamar Jackson          </td></tr>
+<tr><td>NYG</td><td>Daniel Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td> SF</td><td>Raheem Mostert         </td></tr>
@@ -285,7 +286,6 @@
 <tr><td>CAR</td><td>Joey Slye              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
-<tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td>JAX</td><td>Laviska Shenault       </td></tr>
 <tr><td>MIA</td><td>Salvon Ahmed           </td></tr>
 </table>
