--- a/week12.html
+++ b/week12.html
@@ -8,11 +8,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (1)</b></font></td></tr>
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Snell</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kelley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fuller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -28,7 +28,7 @@
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Reagor</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -36,11 +36,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
-<tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>THiggins</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
@@ -50,14 +50,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ballage</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ebron</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ahmed</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Shenault</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -67,27 +67,27 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
+<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Roethlisberger</td><td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Luton</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -111,12 +111,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Drake</td>         <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Moss</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -130,9 +130,9 @@
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -145,7 +145,7 @@
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Gostkowski</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
