--- a/roster.html
+++ b/roster.html
@@ -166,12 +166,12 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>WAS</td><td>Antonio Gibson         </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td>NYJ</td><td>La'Mical Perine        </td></tr>
 <tr><td>SEA</td><td>DeeJay Dallas          </td></tr>
 <tr><td>JAX</td><td>Jake Luton             </td></tr>
+<tr><td>PIT</td><td>Anthony McFarland      </td></tr>
 </table>
 </td>
 </tr>
