--- a/week12.html
+++ b/week12.html
@@ -81,7 +81,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McFarland</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
