--- a/pickups.html
+++ b/pickups.html
@@ -354,7 +354,8 @@ Team 9  - Giovani Bernard/Devonta Freeman (11/13)<br>
 Team 10 - Salvon Ahmed/JaMycal Hasty (11/17)<br>
 Team 9  - Devontae Booker/Justin Jackson (11/26)<br>
 Team 10 - Daniel Jones/AJ Dillon (11/29)<br>
-Team 6  - Anthony McFarland/Joe Burrow (12/2)
+Team 6  - Anthony McFarland/Joe Burrow (12/2)<br>
+Team 10 - Brandon McManus/John Brown (12/6)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
