--- a/roster.html
+++ b/roster.html
@@ -278,12 +278,12 @@
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>MIA</td><td>DeVante Parker         </td></tr>
-<tr><td>BUF</td><td>John Brown             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Jimmy Graham           </td></tr>
 <tr><td>PIT</td><td>Eric Ebron             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Joey Slye              </td></tr>
+<tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td>JAX</td><td>Laviska Shenault       </td></tr>
