--- a/roster.html
+++ b/roster.html
@@ -13,7 +13,6 @@
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
 <tr><td>BUF</td><td>Devin Singletary       </td></tr>
 <tr><td>MIA</td><td>Jordan Howard          </td></tr>
-<tr><td>JAX</td><td>Ryquell Armstead       </td></tr>
 <tr><td>PIT</td><td>Benny Snell            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Chris Godwin           </td></tr>
@@ -24,6 +23,7 @@
 <tr><td> NO</td><td>Jared Cook             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Ryan Succop            </td></tr>
+<tr><td>LAR</td><td>Matt Gay               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td> LV</td><td>Bryan Edwards          </td></tr>
