--- a/roster.html
+++ b/roster.html
@@ -155,6 +155,7 @@
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td>PIT</td><td>James Conner           </td></tr>
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
+<tr><td> SF</td><td>Jeff Wilson            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
@@ -168,7 +169,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Antonio Gibson         </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
-<tr><td>NYJ</td><td>La'Mical Perine        </td></tr>
 <tr><td>SEA</td><td>DeeJay Dallas          </td></tr>
 <tr><td>JAX</td><td>Jake Luton             </td></tr>
 <tr><td>PIT</td><td>Anthony McFarland      </td></tr>
