--- a/roster.html
+++ b/roster.html
@@ -271,13 +271,13 @@
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td> SF</td><td>Raheem Mostert         </td></tr>
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
-<tr><td>MIA</td><td>Matt Breida            </td></tr>
 <tr><td> SF</td><td>Jerick McKinnon        </td></tr>
 <tr><td>LAC</td><td>Kalen Ballage          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>MIA</td><td>DeVante Parker         </td></tr>
+<tr><td>TEN</td><td>Corey Davis            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Jimmy Graham           </td></tr>
 <tr><td>PIT</td><td>Eric Ebron             </td></tr>
