--- a/week14.html
+++ b/week14.html
@@ -38,7 +38,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McCaffery</td>     <td></td><td align=right>0</td></tr>
+<tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
@@ -82,7 +82,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
@@ -95,9 +95,9 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Roethlisberger</td><td></td><td align=right>0</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
@@ -140,12 +140,12 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lindsay</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>CDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ebron</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Jeudy</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
