--- a/roster.html
+++ b/roster.html
@@ -52,7 +52,7 @@
 <tr><td> LV</td><td>Darren Waller          </td></tr>
 <tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ARI</td><td>Zane Gonzalez          </td></tr>
+<tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
