--- a/pickups.html
+++ b/pickups.html
@@ -47,8 +47,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ka'imi Fairbairn/Zane Gonzalez</td>
+<td width=50>12/13</td>
 </tr></table></td>
 </tr>
 <tr>
