--- a/thousand.html
+++ b/thousand.html
@@ -987,6 +987,12 @@
     <td>1010</td>
     <td>Matthew</td>
     <td>810</td></tr>
+<tr><td>2020</td>
+    <td>Week 14</td>
+    <td>Randy Edwards</td>
+    <td>1010</td>
+    <td>John</td>
+    <td>440</td></tr>
 <tr><td>2003</td>
     <td>Week 2</td>
     <td>Mike Wieczorek</td>
