--- a/roster.html
+++ b/roster.html
@@ -136,8 +136,8 @@
 <tr><td> TB</td><td>Antonio Brown          </td></tr>
 <tr><td>CAR</td><td>Robby Anderson         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>DEN</td><td>Noah Fant              </td></tr>
+<tr><td>WAS</td><td>Logan Thomas           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
