--- a/pickups.html
+++ b/pickups.html
@@ -94,8 +94,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Austin Hooper/James Washington</td>
+<td width=50>12/23</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -239,8 +239,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tony Pollard/Darnell Mooney</td>
+<td width=50>12/23</td>
 </tr></table></td>
 </tr>
 <tr>
