--- a/roster.html
+++ b/roster.html
@@ -75,11 +75,11 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>CIN</td><td>AJ Green               </td></tr>
-<tr><td>PIT</td><td>James Washington       </td></tr>
 <tr><td>CLE</td><td>Rashard Higgins        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Rob Gronkowski         </td></tr>
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
+<tr><td>CLE</td><td>Austin Hooper          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -215,6 +215,7 @@
 <tr><td>ATL</td><td>Todd Gurley            </td></tr>
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
+<tr><td>DAL</td><td>Tony Pollard           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
@@ -229,7 +230,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
-<tr><td>CHI</td><td>Darnell Mooney         </td></tr>
 </table>
 </td>
 <td valign=top>
