--- a/roster.html
+++ b/roster.html
@@ -187,11 +187,11 @@
 <tr><td>DEN</td><td>Melvin Gordon          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
-<tr><td>HOU</td><td>Duke Johnson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
+<tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
