--- a/roster.html
+++ b/roster.html
@@ -237,8 +237,8 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (9)</b></font></td></tr>
 <tr><td> NE</td><td>Cam Newton             </td></tr>
 <tr><td>LAR</td><td>Jared Goff             </td></tr>
+<tr><td>CLE</td><td>Baker Mayfield         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td>CIN</td><td>Giovani Bernard        </td></tr>
