--- a/pickups.html
+++ b/pickups.html
@@ -358,7 +358,8 @@ Team 6  - Anthony McFarland/Joe Burrow (12/2)<br>
 Team 10 - Brandon McManus/John Brown (12/6)<br>
 Team 1  - Matt Gay/Ryquell Armstead (12/6)<br>
 Team 6  - Jeff Wilson/La'Mical Perine (12/8)<br>
-Team 10 - Corey Davis/Matt Breida (12/13)
+Team 10 - Corey Davis/Matt Breida (12/13)<br>
+Team 9  - Baker Mayfield/Joe Mixon (12/26)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
