--- a/pickups.html
+++ b/pickups.html
@@ -310,8 +310,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Malcolm Brown/KJ Hamler</td>
+<td width=50>12/30</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
