--- a/roster.html
+++ b/roster.html
@@ -243,6 +243,7 @@
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td>CIN</td><td>Giovani Bernard        </td></tr>
 <tr><td> LV</td><td>Devontae Booker        </td></tr>
+<tr><td>LAR</td><td>Malcolm Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
@@ -257,7 +258,6 @@
 <tr><td>LAR</td><td>Cam Akers              </td></tr>
 <tr><td>PHI</td><td>Jalen Reagor           </td></tr>
 <tr><td>PHI</td><td>Jalen Hurts            </td></tr>
-<tr><td>DEN</td><td>KJ Hamler              </td></tr>
 </table>
 </td>
 </tr>
